objects/Category_Value_Score__c.object
<CustomObject>
    <description>This object will be use for Opportunity Score related Main Category &gt; Sub=Category&gt;Category&gt;Category Value Score.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>It will be use for Opportunity Score related Main Category &gt; Sub=Category&gt;Category.</description>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Category Value Scores</relationshipLabel>
        <relationshipName>Category_Value_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <description>This field will be showing type of input.</description>
        <label>Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <description>Enter Max value for input type number selection</description>
        <label>Maximum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <description>Enter min number value</description>
        <label>Minimum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>This field will be use for storing score of each category.</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoring_Guide__c</fullName>
        <description>This field use for Scoring Guide.</description>
        <label>Scoring Guide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Category Value Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Input_Type__c</columns>
        <columns>Maximum_Value__c</columns>
        <columns>Minimum_Value__c</columns>
        <columns>Score__c</columns>
        <columns>Scoring_Guide__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Value Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Min_Max_required_for_Input_Type_number</fullName>
        <active>true</active>
        <description>Min Max required for Input Type number</description>
        <errorConditionFormula>IF($User.ByPassValidation__c == false,(AND( 
ISPICKVAL( Input_Type__c, &quot;Number&quot;), 
OR ( 
ISBLANK( Minimum_Value__c ) , 
ISBLANK( Maximum_Value__c ) )
)),null)</errorConditionFormula>
        <errorMessage>Min Max required for Input Type number</errorMessage>
    </validationRules>
</CustomObject>